--- a/whitepaperDeMS.tex
+++ b/whitepaperDeMS.tex
@@ -43,14 +43,14 @@
 \affiliation{\textsuperscript{2}\textit{Chief Executive Officer, DeMS, Smart Cities}} % Author affiliation
 \affiliation{*\textbf{Stanley Salvatierra}: s.salvatierra@deepmicrosystems.com} % Corresponding author
 
-\Keywords{Computer Vision --- Smart Cities --- Offline computing --- Artificial Intelligence} % Keywords - if you don't want any simply remove all the text between the curly brackets
+\Keywords{Computer Vision --- Smart Cities --- Off-line computing --- Artificial Intelligence} % Keywords - if you don't want any simply remove all the text between the curly brackets
 \newcommand{\keywordname}{Keywords} % Defines the keywords heading name
 
 %----------------------------------------------------------------------------------------
 %	ABSTRACT
 %----------------------------------------------------------------------------------------
 
-\Abstract{Privacy concerns and the high demand of GPU capabilities are some of the main problems when dealing with real time video processing, security and safety in the industry and growing cities are some of areas of great demand for such techniques. The rising power of small computers and the increasing availability and effectivity in machine learning techniques allow to design devices capable of detecting events in real time without the need of internet connectivity and a cloud computing service, saving money and solving the increasing privacy problem for business and government. In Deep Micro Systems we achieved to combine several techniques to detect events in real time video and combine the information of several cameras connected to a single device to achieve a good frame rate and a good resolution to capture enough detail in the pictures.}
+\Abstract{Privacy concerns and the high demand of GPU capabilities are some of the main problems when dealing with real time video processing, security and safety in the industry and growing cities are some of areas of great demand for such techniques. The rising power of small computers and the increasing power and availability in machine learning techniques allow to design devices capable of detecting events in real time without the need of Internet connectivity and a cloud computing service, saving money and solving the increasing privacy problem for business and government. In Deep Micro Systems we achieved to combine several techniques to detect events in real time video and combine the information of several cameras connected to a single device to achieve a good frame rate and a good resolution to capture enough detail in the pictures.}
 
 %----------------------------------------------------------------------------------------
 
@@ -72,20 +72,20 @@
 
 \addcontentsline{toc}{section}{Introduction} % Adds this section to the table of contents
 
-Privacy concerns, low internet conectivity and low computational power are some of the main reasons to improve real time video analisys to work in local devices. The need of internet connectivity or a GPU service are some huge problems that industries and developing countries have to face, increasing costs and not been accesible all the time.
+Privacy concerns, low Internet connectivity and low computational power are some of the main reasons to improve real time video analysis to work in local devices. The need of Internet connectivity or a GPU service are some huge problems that industries and developing countries have to face, increasing costs and not been accessible all the time.
 
 Computer vision has proved to be of great help for industries and governments aimed to increase security and safety at competitive prices, embedded systems have limited power, thus, the need of new computer vision techniques and new hardware for them to handle complex tasks.
 
-Some specific tasks can offer some facilities to real time video monitoring. That is the case of fixed cameras, surveillance cameras and security cameras that can handle only the changind pixels of video to reduce complexity or can make use of computer vision techniques to stabilice the frames in case of a sudden shake of the camera.
+Some specific tasks can offer some facilities to real time video monitoring. That is the case of fixed cameras, surveillance cameras and security cameras that can handle only the changing pixels of video to reduce complexity or can make use of computer vision techniques to stabilize the frames in case of a sudden shake of the camera.
 
-Simple computer vision techniques require low computational power and allow the devide to focus machine learning techniques, more heavy, on the main core of the problem to be solved. New, more powerful, small computers are also rising such as Orange Pi, Raspberry Pi 3 B + and even neural sticks like Intel movidius, capable of handling new machine learning techniques.
+Simple computer vision techniques require low computational power and allow the device to focus machine learning techniques, more heavy, on the main core of the problem to be solved. New, more powerful, small computers are also rising such as Orange Pi, Raspberry Pi 3 B + and even neural sticks like Intel Movidius, capable of handling new machine learning techniques.
 
 %------------------------------------------------
 \section{Deep Micro Systems}
 
 Deep Micro Systems is a Bolivian Start up in the field of Computer Vision and Smart cities with the mission to  expand the awareness and knowledge industry and governments to smart cities, providing security, efficiency and generating solutions to critical problems in a measurable and sustainable way.
 
-\paragraph{Road Insecurity} The high numbers in roads accidents is currenlty a great concern for Bolivian government with 1300 deaths every year, new technologies are needed in order to reduce this huge numbers and help solve the main problem. As Internet connectivity in Bolivia is expensive and low efficient compared to our neighbor countries, the need of offline processing is a major concern. In order to achieve this Deep Micro Systems designed an All-In-One Device capable of detecting traffic Infringements, generate a visual proof of them and generate valuable real time data for city planning.
+\paragraph{Road Insecurity} The high numbers in roads accidents is currently a great concern for Bolivian government with 1300 deaths every year, new technologies are needed in order to reduce this huge numbers and help solve the main problem. As Internet connectivity in Bolivia is expensive and low efficient compared to our neighbor countries, the need of off-line processing is a major concern. In order to achieve this Deep Micro Systems designed an All-In-One Device capable of detecting traffic Infringements, generate a visual proof of them and generate valuable real time data for city planning.
 
 In order to generate security in roads and streets, our camera is capable of detecting events in real time video, measure and identify if necessary the vehicle violating law.
 
@@ -97,15 +97,15 @@ In order to generate security in roads and streets, our camera is capable of det
 \item Smart traffic light managing
 \end{itemize}
 
-\paragraph{Industry} Boliviann local business such as Enalbo and IBCO SRL, let us know their interest in detecting real time events such as security infringements of their personal, abnormal functioning of equipment and other failures.
+\paragraph{Industry} Bolivian local business such as Enalbo and IBCO SRL, let us know their interest in detecting real time events such as security infringements of their personal, abnormal functioning of equipment and other failures.
 
 \subsection{All-In-One devices}
 
-The lowering costs of pocket computers and the increasing power and efficiency of machine learning techniques allow to build small devices capable of solve huge problems in cities and in the industry without the need of internet connectivity, guaranteeing privacy and cheaper uninterrupted work.
+The lowering costs of pocket computers and the increasing power and efficiency of machine learning techniques allow to build small devices capable of solve huge problems in cities and in the industry without the need of Internet connectivity, guaranteeing privacy and cheaper uninterrupted work.
 
 Computer processors such as Cortex-A53 (ARMv8) 64-bit SoC with 1.4GHz and ARM H3 Quad-core Cortex-A7 with 1.6GHz are capable to handle complex tasks and can make use of the new neural chips to get even faster results in real time.
 
-All this components allow to build custom devices for solving specific problems, providing ethernet connectivity, GPS, GSM/GPRS, Bluetooth, WiFi and any kind of sensors to be required.
+All this components allow to build custom devices for solving specific problems, providing Ethernet connectivity, GPS, GSM/GPRS, Bluetooth, WiFi and any kind of sensors to be required.
 
 \begin{figure}[t]\centering
 	\includegraphics[width=0.8\linewidth]{images/lucam_005}
@@ -118,7 +118,7 @@ Currently Lu-Cam, our smart traffic enforcement camera is a 8x9x16 cm device cap
 %------------------------------------------------
 \subsection{Real time monitoring and data analysis}
 
-Such All-In-One Devices holds a huge advantage, allowing to pre process data. For example for real time road monitoring we could get real time histograms of infringements and label them according to our needs as shown in figure \ref{fig:histogram}. Then a central computer can handle data from several devices to make desitions, improving efficiency or automating complex process.
+Such All-In-One Devices holds a huge advantage, allowing to pre-process data. For example for real time road monitoring we could get real time histograms of infringements and label them according to our needs as shown in figure \ref{fig:histogram}. Then a central computer can handle data from several devices to make decisions, improving efficiency or automating complex process.
 
 \begin{figure}[t]\centering
 	\includegraphics[width=\linewidth]{images/histogram}
@@ -145,11 +145,11 @@ Such All-In-One Devices holds a huge advantage, allowing to pre process data. Fo
  
 The applications for this kind of devices are endless. Real time monitoring and data analysis can lead us to a better understanding of cause problems and possible solutions to them thanks to data science and big data techniques.
 
-Forecasting data is another example of an application of monitoring systems, in the case of real time traffic monitoring it cann lead to traffic forecasting, saving thousands in time, fuel and possible accidents happening in streets and roads across Bolivia and the world, forecast is possible with a little amount of devices like shown in figure \ref{fig:forecast}
+Forecasting data is another example of an application of monitoring systems, in the case of real time traffic monitoring it can lead to traffic forecasting, saving thousands in time, fuel and possible accidents happening in streets and roads across Bolivia and the world, forecast is possible with a little amount of devices like shown in figure \ref{fig:forecast}
 
 
 
-Real time simulation is also possible thank to the real time and flow data in the devices, allowing us to extrapolate data to points where it is not possible to place a monitoring device. Like agressive environments in industries to complex roads in cities.
+Real time simulation is also possible thank to the real time and flow data in the devices, allowing us to extrapolate data to points where it is not possible to place a monitoring device. Like aggressive environments in industries to complex roads in cities.
 
 %------------------------------------------------
 \phantomsection
