Added PhD Cabrera feedback

--- a/cto.tex
+++ b/cto.tex
@@ -16,9 +16,9 @@ Nevertheless, there is a strong demand for mobile vision solutions ranging from 
 The problem of on-board computing and further analysis of real time video is subject of current research. We follow the next procedure which is focused on 3 main cycles that are plot in figure \ref{fig:cycle} and are stated as follows:
 
 \begin{figure}[h]\centering
-	\includegraphics[width=0.7\linewidth]{images/cycle}
+	\includegraphics[width=0.6\linewidth]{images/cycle}
 	\caption{Cycle of work}
-	\label{fig:cicle}
+	\label{fig:cycle}
 \end{figure}
 
 % Explain the DEMS cicle for target project
