--- a/whitepaperDeMS.tex
+++ b/whitepaperDeMS.tex
@@ -50,7 +50,7 @@
 %	ABSTRACT
 %----------------------------------------------------------------------------------------
 
-\Abstract{Privacy concerns and the high demand of GPU capabilities are some of the main problems when dealing with real time video processing, security and safety in the industry and growing cities are some of areas of great demand for such techniques. The rising power of small computers and the increasing power and availability in machine learning techniques allow to design devices capable of detecting events in real time without the need of Internet connectivity and a cloud computing service, saving money and solving the increasing privacy problem for business and government. In Deep Micro Systems we achieved to combine several techniques to detect events in real time video and combine the information of several cameras connected to a single device to achieve a good frame rate and a good resolution to capture enough detail in the pictures.}
+\Abstract{Privacy concerns and the high demand of GPU capabilities are some of the main problems for real-time video processing when dealing with security and safety in the industry and urban areas, thus, generating high demand for suitable emerging technologies.  The rising power of small computers and the increasing capabilities of machine learning techniques are allowing us to design devices capable of detecting events in real time without the need of Internet connectivity or cloud computing access; therefore saving money and solving the increasing privacy problems for business and government institutions. In Deep Micro Systems we succeeded to combine several techniques to detect events in real-time video and exploit the combined information of several cameras connected to a single device, achieving a reasonable frame rate and sufficient resolution to capture the required details.}
 
 %----------------------------------------------------------------------------------------
 
@@ -72,40 +72,45 @@
 
 \addcontentsline{toc}{section}{Introduction} % Adds this section to the table of contents
 
-Privacy concerns, low Internet connectivity and low computational power are some of the main reasons to improve real time video analysis to work in local devices. The need of Internet connectivity or a GPU service are some huge problems that industries and developing countries have to face, increasing costs and not been accessible all the time.
+Privacy concerns, reduced Internet connectivity, and low computational power are some of the main reasons to improve real-time video processing in local devices. The requirements for Internet connectivity and GPU services are some of the enormous problems that are particularly limiting in developing countries.
 
-Computer vision has proved to be of great help for industries and governments aimed to increase security and safety at competitive prices, embedded systems have limited power, thus, the need of new computer vision techniques and new hardware for them to handle complex tasks.
+Computer vision has proved to be of great help for industries and governments aiming to increase security and safety at competitive prices. Embedded systems have limited power; thus, the need for novel computer vision techniques and new hardware are essential to handle more complex tasks.
 
-Some specific tasks can offer some facilities to real time video monitoring. That is the case of fixed cameras, surveillance cameras and security cameras that can handle only the changing pixels of video to reduce complexity or can make use of computer vision techniques to stabilize the frames in case of a sudden shake of the camera.
+Some specific tasks can offer some facilities to real-time video monitoring. That is the case of fixed cameras, surveillance cameras and security cameras that can handle only the changing pixels of video to reduce complexity or can make use of computer vision techniques to stabilize the frames in case of a sudden shake of the camera.
 
-Simple computer vision techniques require low computational power and allow the device to focus machine learning techniques, more heavy, on the main core of the problem to be solved. New, more powerful, small computers are also rising such as Orange Pi, Raspberry Pi 3 B + and even neural sticks like Intel Movidius, capable of handling new machine learning techniques.
+Simple computer vision techniques require low computational power and can be tailored to focus machine learning techniques on particular tasks.
+
+New and more powerful small computers are also appearing such as Orange Pi, Raspberry Pi 3 B + and even neural sticks like Intel Movidius, which are capable of handling modern machine learning techniques.
 
 %------------------------------------------------
 \section{Deep Micro Systems}
 
-Deep Micro Systems is a Bolivian Start up in the field of Computer Vision and Smart cities with the mission to  expand the awareness and knowledge industry and governments to smart cities, providing security, efficiency and generating solutions to critical problems in a measurable and sustainable way.
+Deep Micro Systems is a Bolivian Startup in the fields of Computer Vision and Smart Cities, with the mission to inform and to provide solutions to critical problems in the industry and government. 
 
-\paragraph{Road Insecurity} The high numbers in roads accidents is currently a great concern for Bolivian government with 1300 deaths every year, new technologies are needed in order to reduce this huge numbers and help solve the main problem. As Internet connectivity in Bolivia is expensive and low efficient compared to our neighbor countries, the need of off-line processing is a major concern. In order to achieve this Deep Micro Systems designed an All-In-One Device capable of detecting traffic Infringements, generate a visual proof of them and generate valuable real time data for city planning.
+\paragraph{Road Security} The high number of roads accidents is currently of great concern for the Bolivian government with about 1300 deaths every year. New technologies are needed to reduce these large numbers. As Internet connectivity in Bolivia is expensive and unreliable compared to our neighboring countries, the need for off-line processing is a major concern. To address this problem,  Deep Micro Systems designed an All-In-One device capable of detecting traffic Infringements, producing a visual proof of the act and at the same time generating valuable real-time data for city planning.
 
-In order to generate security in roads and streets, our camera is capable of detecting events in real time video, measure and identify if necessary the vehicle violating law.
+Our camera is capable of detecting events in real-time video identifying the vehicle violating the law.
 
-\paragraph{Applications of computer vision} Besides road infringement detection, Deep Micro Systems works with computer vision, and it's variety of applications in industry and government. Some of other projects for Deep Micro Systems in the short term are:
+\paragraph{Applications of computer vision} Besides road infringement detection, Deep Micro Systems works with computer vision systems with a broad perspective with applications in industry and government. Some of the other projects that Deep Micro Systems is planning to get involved in the short term are:
 
 \begin{itemize}[noitemsep] % [noitemsep] removes whitespace between the items for a compact look
 \item Optimal city design, parking, roads and flows
 \item Traffic accidents forecast
 \item Smart traffic light managing
+\item Industrial applications of computer vision.
 \end{itemize}
 
-\paragraph{Industry} Bolivian local business such as Enalbo and IBCO SRL, let us know their interest in detecting real time events such as security infringements of their personal, abnormal functioning of equipment and other failures.
+\paragraph{Industry} Local Bolivian business such as Enalbo and IBCO SRL expressed their interest in detecting real-time events such as security infringements
+of their personal, abnormal functioning of equipment and other failures.
 
 \subsection{All-In-One devices}
 
-The lowering costs of pocket computers and the increasing power and efficiency of machine learning techniques allow to build small devices capable of solve huge problems in cities and in the industry without the need of Internet connectivity, guaranteeing privacy and cheaper uninterrupted work.
+The lowering costs of pocket computers and the
+increasing power and efficiency of machine learning techniques allow us to build small devices capable of solving important problems in urban areas and the industry without the need of Internet connectivity, guaranteeing privacy and cheaper uninterrupted work.
 
-Computer processors such as Cortex-A53 (ARMv8) 64-bit SoC with 1.4GHz and ARM H3 Quad-core Cortex-A7 with 1.6GHz are capable to handle complex tasks and can make use of the new neural chips to get even faster results in real time.
+Computer processors such as Cortex-A53 (ARMv8) 64-bit SoC with 1.4GHz, and ARM H3 Quad-core Cortex-A7 with 1.6GHz are capable of handling complex tasks and can make use of the new neural chips to get even faster  results in real time.
 
-All this components allow to build custom devices for solving specific problems, providing Ethernet connectivity, GPS, GSM/GPRS, Bluetooth, WiFi and any kind of sensors to be required.
+All these components allow us to build custom devices for solving specific problems, providing Ethernet connectivity, GPS, GSM/GPRS, Bluetooth, WiFi and any sensors to be required.
 
 \begin{figure}[t]\centering
 	\includegraphics[width=0.8\linewidth]{images/lucam_005}
@@ -113,12 +118,13 @@ All this components allow to build custom devices for solving specific problems,
 	\label{fig:device}
 \end{figure}
 
-Currently Lu-Cam, our smart traffic enforcement camera is a 8x9x16 cm device capable, as seen in figure \ref{fig:device}, and it is capable of detecting events in real time video. Rather than getting frame features with convolutional neural networks, that would take several seconds to complete, we make use of some advantages of their main purpose, extracting only relevant features and making an improvement to less of a tenth of the time it would require. Other techniques continue to appear such as \cite{Cavigelli:2017:CCI:3131885.3131906}, in order to improve efficiency without missing the main objectives of a project.
+Currently, Lu-Cam, our smart traffic enforcement camera is an 8x9x16 cm device capable, as seen in figure \ref{fig:device},and it is able of detecting events in real-time videos. Rather than getting frame features with convolutional neural networks, that would take several seconds to complete, we make use of the advantage of knowing the primary purpose, extracting only relevant features and making an improvement to less of a tenth of the time it would require otherwise.
 
 %------------------------------------------------
 \subsection{Real time monitoring and data analysis}
 
-Such All-In-One Devices holds a huge advantage, allowing to pre-process data. For example for real time road monitoring we could get real time histograms of infringements and label them according to our needs as shown in figure \ref{fig:histogram}. Then a central computer can handle data from several devices to make decisions, improving efficiency or automating complex process.
+Such All-In-One Devices hold a huge advantage, allowing to pre-process data. For example,
+real-time road monitoring could generate real-time histograms of infringements with proper labeling as shown in figure \ref{fig:histogram}. Then a central computer can handle data from several devices to make decisions, improving efficiency or automating complex processes.
 
 \begin{figure}[t]\centering
 	\includegraphics[width=\linewidth]{images/histogram}
@@ -162,9 +168,9 @@ We would like to thank the Unidad de Fortalecimiento Empresarial, El Alto, Unida
 %----------------------------------------------------------------------------------------
 %	REFERENCE LIST
 %----------------------------------------------------------------------------------------
-\phantomsection
-\bibliographystyle{unsrt}
-\bibliography{sample}
+%\phantomsection
+%\bibliographystyle{unsrt}
+%\bibliography{sample}
 
 %----------------------------------------------------------------------------------------
 
